Bug 263809 - can't decrypt or get signature details
Summary: can't decrypt or get signature details
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: HI major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-21 02:55 UTC by Marcus Brinkmann
Modified: 2011-02-15 19:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Brinkmann 2011-01-21 02:55:03 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

I can't activate the "decrypt message" or "signature details" "links" in the message viewer.  This may be due to the fact that double clicking is used for selecting text for cut and paste?  I tried single tap, double tap, and even some keyboard action.  Only double tapping showed any result, and that was the wrong one (highlighting text instead of activating the action).

Reproducible: Always
Comment 1 Marcus Brinkmann 2011-01-21 03:08:27 UTC
by randomly clicking on the screen, I found some sensitive areas that did not contain text, but we need something that a user can figure out how to do.
Comment 2 Bernhard E. Reiter 2011-01-21 14:36:21 UTC
Could have the same cause as Bug 263856 -  Links are very hard to activate in the messageviewer
Comment 3 Tobias Koenig 2011-01-24 19:59:06 UTC
Git commit f658ee449d3955c0dd5aec68a33e4392fd1de02f by Tobias Koenig.
Pushed by tokoe into branch 'master'.

Fixed the mouse-click handling in message viewer

The coordinate mapping code in the MessageViewItem::simulateMouseClick()
reimplementation was horribly wrong. Now we use the correct implementation
from the base class. Thanks to Volker and Andy for brain storming :)

BUG: 263809
BUG: 263856

M  +0    -11   mobile/mail/messageviewitem.cpp     
M  +0    -1    mobile/mail/messageviewitem.h     

http://commits.kde.org/ee6cc38b/f658ee449d3955c0dd5aec68a33e4392fd1de02f