Fixed the mouse-click handling in message viewer

The coordinate mapping code in the MessageViewItem::simulateMouseClick()
reimplementation was horribly wrong. Now we use the correct implementation
from the base class. Thanks to Volker and Andy for brain storming :)

BUG: 263809
BUG: 263856